[package]
name = "fragstrings"
version = "0.1.0"
authors = ["Alex Kordys <akordys@web3tech.ru>"]
edition = "2018"

[dependencies]
format-procmacro = { path = "./format-procmacro", optional = true }
parse-procmacro = { path = "./parse-procmacro", optional = true }

[features]
default = ["format", "parse"]
format = ["format-procmacro"]
parse = ["parse-procmacro"]

[workspace]
members = ["format-procmacro", "parse-procmacro", "fragstrings-utils"]
