[package]
name = "fragstrings"
version = "0.2.0"
authors = ["Alex Kordys <akordys@uniqsoft.ae>"]
edition = "2018"

[dependencies]
format-procmacro = { version = "0.1.1", registry = "wx", path = "./format-procmacro", optional = true }
parse-procmacro = { version = "0.1.1", registry = "wx", path = "./parse-procmacro", optional = true }

[features]
default = ["format", "parse"]
format = ["format-procmacro"]
parse = ["parse-procmacro"]

[workspace]
members = ["format-procmacro", "parse-procmacro", "utils"]
